--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -1,3 +1,9 @@
+body{
+    margin: 0;
+    padding: 0;
+}
+
+
 .header_categories {
     position: relative;
     top: 0;
@@ -203,8 +209,7 @@
 
 
 .cartPage {
-    margin: 0;
-    padding: 0;
+   
     background-color: rgba(160, 156, 152, 0.192);
 
 
