--- a/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3.scss
+++ b/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3.scss
@@ -13,10 +13,10 @@
 
 // colors and font //
 
-$iconscolor: rgb(62, 60, 60);
+$iconscolor: rgb(72, 69, 69);
 $fontcolor: rgb(133, 122, 150);
-$primarycolor1: #66529A;
-$primarycolor2: #E052B6;
+$primarycolor1: #66529af1;
+$primarycolor2: #e052b5e3;
 $mainFontFamily: 'Neue Haas Grotesk Display Pro',
 sans-serif;
 $shadow: 1px 1px 1px #a8a7a7,
@@ -42,7 +42,11 @@ body {
     color: $iconscolor;
 
     &__back {
-        font-size: 24px;
+        font-size: 27px;
+    }
+
+    &__search {
+        font-size: 30px;
     }
 
 }
@@ -52,126 +56,233 @@ body {
     @include flexCenter(center, column);
     // @include border();
 
-    height: 17vh;
+    height: 14vh;
 
-    div{
+    div {
         height: 20%;
         font-size: 80%;
         margin-bottom: 0.4em;
         @include flexCenter(center, row);
     }
 
-    h1, h2, p{
+    h1,
+    h2,
+    p {
         margin: 0px;
+    }
+
+    p {
+        font-size: 17px;
+        color: rgb(52, 51, 51);
+    }
+
+    h2 {
+        font-size: 25px;
+    }
+
+    h1 {
+        font-size: 25px;
     }
 
 }
 
-.schedatebox{
+.schedatebox {
 
     @include flexCenter(space-between, row);
     // @include border();
     height: 7vh;
     padding-inline: 0.3em;
 
-    div{
+    div {
         height: 100%;
         @include flexCenter(center, row);
     }
 
-    h3, p{
+    h3,
+    p {
         margin: 0px;
         @include flexCenter(center, row);
     }
 
-    p{
+    p {
         color: $fontcolor;
-        font-size: 80%;
     }
-    
+
 }
 
-.schecards{
+.schecards {
 
     @include flexCenter(flex-start, row);
     align-items: flex-start;
     // @include border();
-    height: 13vh;
-    padding-top: 0px;
+    height: 17vh;
     overflow-x: auto;
 
-    &__card{ 
+    &__card {
 
-        div{
-            min-height: 30%;
-            @include flexCenter(center, row)
+        @include flexCenter(center, column);
+        // @include border();
+        border-radius: 10px;
+        min-width: 3.5em;
+        height: 60%;
+        background: #D8CAE1;
+        margin-inline: 0.5em;
+        position:relative;
+        transition: 0.4s;
+        margin-top: 10px;
+    
+        
+   
+
+        div {
+            margin-top: 0.5em;
+            height: 25%;
+            @include flexCenter(center, row);
         }
 
-        p{
+        p {
 
             width: 80%;
             margin: 0px;
             padding: 0px;
         }
 
-        .date{
-            p{
+        .date {
+            margin-top: 0;
+            p {
                 font-weight: 700;
+                font-size: 20px;
             }
         }
 
-        .day{
-            p{
+        .day {
+            p {
                 font-weight: 200;
             }
         }
 
-        .bell{
+        .bell {
             color: rgb(255, 255, 255);
             display: none;
-            &:active{
+
+            &:active {
                 color: rgb(254, 229, 146)
             }
         }
 
-        @include flexCenter(space-around,column);
-        // @include border();
-        border-radius: 10px;
-        min-width: 3.2em;
-        height: 60%;
-        background: #D8CAE1;
-        margin-inline: 0.5em;
-        overflow-y: auto;
+        .circle {
+            width: 18px;
+            height: 18px;
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            background-color: rgb(201, 61, 61);
+            border: 3px solid #ffffff;
+            border-radius: 50%;
+            // margin-left: -10px;
+            position: absolute;
+            top: -15px;
+            right: -5px;
+            display: none;
+        }
 
-        &:hover{
+        &:hover {
 
-            transition: all 0.8s;
             height: 80%;
-            background: linear-gradient(110deg, $primarycolor1 60%, $primarycolor2);
+            background: linear-gradient(145deg, $primarycolor1 40%, $primarycolor2);
             color: white;
-            .div{
-                margin-block: 0px;
+
+            .date{
+                margin-top: 1em;
             }
-            .bell{
+
+            .bell {
+                display: block;
+            }
+            .circle{
                 display:block;
             }
         }
     }
 }
 
-.progress{
-    
+.progress {
+
+
     // @include border();
     height: 12vh;
-    
-}
 
-.image{
+    >div {
+        margin-inline: 0.5em;
+        margin-bottom: 0.5em;
+    }
 
+    p {
+        margin-bottom: 0.5em;
+    }
 
-    img{
-        width: 100%;
-        height: 80%;
+    &__title {
+        font-size: 20px;
+        font-weight: 700;
+    }
+
+    &__bar {
+
+        display: flex;
+        align-items: center;
+        background: #D8D5E0;
+        height: 1em;
+        border-radius: 25px;
+
+        &__btn {
+
+            width: 30px;
+            height: 30px;
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            background-color: white;
+            border: 8px solid #464E85;
+            border-radius: 50px;
+            margin-left: -10px;
+
+        }
+
+        &__pbar {
+            padding: 0px;
+            margin: 0px;
+            border-radius: 25px;
+            height: 100%;
+            width: 67%;
+            background: linear-gradient(to right, $primarycolor1 60%, $primarycolor2);
+        }
+    }
+
+    &__mins {
+        font-size: 20px;
+        font-weight: 700;
+
+        span {
+            font-size: 18px;
+            font-weight: 300;
+        }
     }
 }
 
+
+
+
+.image {
+
+    position: fixed;
+    bottom: -5px;
+    width: 100%;
+
+    img {
+
+        display: block;
+        margin: auto;
+        width: 350px;
+        height: 80%;
+    }
+}
