shani plant website

--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -224,10 +224,8 @@ body {
 
 
     &__title {
-        margin-top: 5%;
+        padding-top: 1rem;
         color: rgba(0, 0, 0, 0.774);
-        border-radius: 3%;
-
 
     }
 
@@ -316,7 +314,7 @@ body {
 
 
 .checkout {
-    background-color: rgb(255, 255, 255);    
+    background-color: rgb(255, 255, 255);
     height: 50vh;
     padding: 2rem;
     font-family: sans-serif;
@@ -392,6 +390,54 @@ body {
             cursor: pointer;
 
         }
+
+    }
+
+
+}
+
+
+@media screen and (min-width: 1200px) {
+
+    .myCart__grid {
+
+
+        &__title {
+            text-align: center;
+            font-size: calc(1rem + 0.5rem);
+
+        }
+
+
+        &__box {
+            font-size: calc(70% + 0.5rem);
+
+
+        }
+    }
+
+    .leftside {
+        input {
+            width: 4rem;
+            height:2rem;
+            
+
+        }
+    }
+
+    .checkout {
+        font-size: calc(70% + 0.5rem);
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    .button__checkout {
+        font-size: calc(60% + 0.5rem);
+
+    }
+
+    .button__add {
+        font-size: calc(60% + 0.5rem);
 
     }
 
