--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
@@ -66,12 +66,24 @@ nav ul {
     flex-direction: row;
     justify-content: space-between;
     padding-inline: 2rem;
-    max-width: 90vw;
+    max-width: 100vw;
     &__mytasks {
         display: flex;
+        padding-inline: 2rem;
         flex-direction: row;
-    
+            right: 20vw;
+
+        & > h3 {
+            color: #F0F0F2;
+            background: #141414;
+            padding: 1rem;
+            justify-self: flex-start;
+            margin-left: 1rem;
+            border-radius: 7px;
+        }
+        
     }
+    
 
 
     &__nav {
@@ -127,9 +139,12 @@ nav ul {
         top: 0;
         display: inline;
     }
-
-    #control__mytasks {
-        display: none;
+    
+    #control{
+        max-width: 100%;
+        &__mytasks {
+            display: none;
+        }
     }
 
 }
