--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -1,175 +1,197 @@
-body{
-    display: flex;
-    background: #eee;
-    margin: 0;
-    height: auto;
-    
+body {
+  display: flex;
+  background: #eee;  
+  height: auto;
 }
-#landing{
-    width: 576px;
-    height: 1224px;
-    
-    margin: auto;
-    background-color: red;
-    
-    }
-#landing-home {
+#landing {
+padding-top: 1.5rem ;
+  width: 100vw;
+  height: 100%;
+margin: auto;
+  background-color: rgb(114, 95, 95);
+
+  &-home {
     height: 100vh;
     background: white;
     padding: 30px;
 
     &__logo {
-        display: flex;
+      display: flex;
 
-        img {
-            height: 60px;
-            width: 60px;
-            border-radius: 10px;
-            margin-left: 50px;
-            margin-top: 20px;
-        }
+      img {
+        height: 60px;
+        width: 60px;
+        border-radius: 10px;
+        margin-left: 50px;
+        margin-top: 20px;
+      }
 
-        h1 {
-            font-weight: 700;
-        }
+      h1 {
+        font-weight: 700;
+      }
 
-        span {
-            font-size: 1rem;
-            font-weight: normal;
-        }
+      span {
+        font-size: 1rem;
+        font-weight: normal;
+      }
     }
 
     &__search {
-        text-align: center;
+      text-align: center;
 
-        input {
-            margin-left: auto;
-            margin-right: auto;
-            font-size: 25px;
-            border-radius: 10px;
-            height: 50px;
-        }
+      input {
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 25px;
+        border-radius: 10px;
+        height: 50px;
+      }
     }
 
     &__task {
+      display: flex;
+      flex-direction: column;
+      font-weight: bold;
+
+      .task {
         display: flex;
-        flex-direction: column;
-        font-weight: bold;
+        justify-content: space-between;
+        align-items: center;
+      }
 
-        .task {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+      .icon {
+        margin-top: 15px;
+        height: 50px;
+        width: 50px;
+        border-radius: 5px;
 
+        &__1 {
+          background-color: #ffc898;
         }
 
-        .icon {
-            margin-top: 15px;
-            height: 50px;
-            width: 50px;
-            border-radius: 5px;
-
-            &__1 {
-                background-color: #ffc898;
-            }
-
-            &__2 {
-                background-color: #aaeffa;
-            }
-
-            &__3 {
-                background-color: #f4ff7f;
-            }
-
-            i {
-                margin-left: 13px;
-                margin-top: 13px;
-            }
+        &__2 {
+          background-color: #aaeffa;
         }
+
+        &__3 {
+          background-color: #f4ff7f;
+        }
+
+        i {
+          margin-left: 13px;
+          margin-top: 13px;
+        }
+      }
     }
 
-    &__recent {
-        .recent__title {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
+    &__recent__title {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
-}
+  }
+  //------------Etan
+  //----- already created description boxes
+  &__task {
+    &-count {
+      display: flex;
+      padding-left: 1.5rem ;
+      flex-direction: row;
+      width: 100vw;
+      background: #aaeffa;
+      height: fit-content;
+      overflow-y: scroll;
 
-main{
-    padding-top: 6vh;
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    flex-direction: row;
-    align-self: center;
-}
-#landing__task-count{
-    display: flex;
-    flex-direction: row;
-    min-width: 100%;
-    background: #aaeffa;
-    height: fit-content;
-    overflow-y: scroll;
-    
-    
-    .box{
-        justify-content: center;
-        font-family: 'Poppins', sans-serif;
-        text-transform:capitalize;
-        background: white;
-       border-radius: .5rem;
-       padding: 0rem 1rem 1rem 2rem;
-       min-width: 30vw;
-       margin: 1rem;
-       height: auto;
-       
-       
-       
-       &__flex{
+      @media only screen and (min-width: 600px) {
+        max-width: 100%;
+        padding-top: 3rem;
+      }
+
+      
+      .box {
         box-sizing: content-box;
-        display: flex;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+          rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+          rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+        justify-content: center;
+        font-family: "Poppins", sans-serif;
+        text-transform: capitalize;
+        background: white;
+        border-radius: 0.5rem;
+        padding: 0rem 1rem 1rem 2rem;
+        min-width: 20ch;
+        height: auto;
+        margin: .8rem;
+        height: auto;
         
-        flex-direction: column;
-        margin: 0;
-        padding: 0;
-        
-        
-        
-       }
-&__header{
-    display: flex;
-    flex-direction: row;
-    justify-items: center;
-    
-   
-   
-    
-}
-&__title{
-    display:grid;
-    grid-gap: 0;
-    height: min-content;
-}
-&__logo{
-    font-weight: bolder 700;
-    font-size: 1.5rem;
-    
-    margin-right: 1rem;
-    background-color: powderblue;
-    padding: .7rem;
-    border-radius: .5rem;
-}
 
+        &__flex {
+            justify-content: center;
+          display: flex;
+          flex-direction: column;
+          margin: 0;
+          padding: 0;
+        }
+        &__header {
+          display: flex;
+          flex-direction: row;
+          justify-items: center;
+        }
+        &__title {
+          display: grid;
+          justify-content: center;
+        }
+        &__logo {
+          font-weight: bolder 700;
+          font-size: 1.5rem;
+
+          margin-right: 1rem;
+          background-color: powderblue;
+          padding: 0.7rem;
+          border-radius: 0.5rem;
+        }
+      }
     }
+    // ------ adding description box
+
+    &__descr {
+      border: 2px solid rgba(128, 128, 128, 0.7);
+      border-radius: 3px;
+      max-width: 100vw;
+      box-sizing: content-box;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      padding: 1.5rem;
+      margin: 2rem;
+
+      @media only screen and (min-width: 600px) {
+        max-width: 100%;
+      }
+
+      &__text {
+        padding-inline: 0;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+
+        & > h3,
+        p {
+          margin: 0.1rem;
+          padding: 0;
+        }
+      }
+    }
+  }
 }
 
-
-
-
-
-
-
-
-
+main {
+    
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  flex-direction: column;
+  align-self: center;
+  overflow-y: hidden;
+}
