--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -95,6 +95,15 @@ body{
             justify-content: space-between;
         }
     }
+    .recent-box{
+        display: flex;
+        &__1{
+            height: 11rem;
+            width: 11em;
+            background-color: purple;
+        }
+        
+    }
 }
 
 main{
