--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
@@ -5,7 +5,7 @@
   background-color: #030203;
   margin:auto;
   display: grid;
-  grid-template-rows: 50px 80px 20px;
+  grid-template-rows: 10% auto 10%;
 
   &__Header {
       display: grid;
