--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
@@ -1,22 +1,54 @@
-.MainWrapper {
-  width: 40vw;
-  height:90vh;
-  border-radius: 40px;
-  background-color: #030203;
-  margin:auto;
-  display: grid;
-  grid-template-rows: 10% auto 10%;
-
-  &__Header {
-      display: grid;
-      border: 1px solid red;
-  }
-  &__Content {
-      display: grid;
-      border: 1px solid red;
-  }
-  &__NavBar {
-      display: grid;
-      border: 1px solid red;
-  }
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.Container {
+    display:grid;
+    height: 100vh;
+    grid-template-columns: 10rem 1fr 1fr 1fr;
+    grid-template-rows: 0.1fr auto;
+    grid-template-areas: 
+    "Header Header Header Header"
+    "Navbar Roi Wil Yael";
+    grid-gap:0.2rem;
+
+    &__Header {
+        background-color:rgb(202, 223, 192);
+        grid-area:Header;
+    }
+    &__Navbar {
+        background-color:rgb(192, 211, 223);
+        grid-area:Navbar;
+    }
+    &__Roi {
+        background-color:rgb(223, 207, 192);
+        grid-area:Roi;
+    }
+    &__Wil {
+        background-color:rgb(223, 207, 192);
+        grid-area:Wil;
+    }
+    &__Yael {
+        background-color:rgb(223, 207, 192);
+        grid-area:Yael;
+    }
+}
+
+@media only screen and (max-width:1000px) {
+    
+    .Container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.1fr 0.8fr 0.1fr;
+        grid-template-areas: 
+        "Header"
+        "Wil"
+        "Navbar";
+        
+            &__Yael {
+                display: none;
+            }
+            &__Roi {
+                display: none;
+            }
+        }
+    }
