--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
@@ -4,95 +4,64 @@ body {
 }
 
 .Container {
-    display:grid;
-    height: 100vh;
-    grid-template-columns: 10rem 1fr 1fr 1fr;
-    grid-template-rows: 0.1fr auto;
-    grid-template-areas: 
-    "Header Header Header Header"
-    "Navbar Roi Wil Yael";
-    grid-gap:0.2rem;
 
     &__Header {
-        border:1px solid red;
-        grid-area:Header;
+        display:grid;
+        grid-template-columns: 0.1fr auto 0.1fr;
+        grid-template-rows: 7vh;
+        align-items: center;
+        //border: 1px solid red;
         
-        &__HContent {
-            height: 100%;
-            display: grid;
-            grid-template-columns: 20% auto 20%;
-            border: 1px solid red;
-
-            &__Avatar {
+        &__Avatar {
                 display: grid;
-                border: 1px solid red;
+                padding: 10px;
                 justify-content: center;
-                align-items: center;
-                
                 img {
-                    width: 70px;
-                    height: 70px;
+                width: 30px;
+                height: 30px;
                 }
-            }
-
-            &__Welcome {
-                display: grid;
-                color:white;
-                align-items: center;
-            }
-            
-            &__MenuBtn {
-                display: grid;
-                border: 1px solid red;
-                justify-content: center;
-                align-items: center;
-                
-                img {
-                    width: 70px;
-                    height: 70px;
-                }
-            }
-        }
-    }
-    &__Navbar {
-        border:1px solid red;
-        color: white;
-        grid-area:Navbar;
-        
         }
 
-    &__Roi {
-        border:1px solid red;
-        color: white;
-        grid-area:Roi;
-    }
-    &__Wil {
-        border:1px solid red;
-        color: white;
-        grid-area:Wil;
-    }
-    &__Yael {
-        border:1px solid red;
-        color: white;
-        grid-area:Yael;
-    }
-
-}
-@media only screen and (max-width:1000px) {
+        &__Welcome {
+            display:grid;
+            color:white;
+            padding: 10px;
+        }
     
-    .Container {
-        grid-template-columns: 1fr;
-        grid-template-rows: 0.1fr 0.8fr 0.1fr;
-        grid-template-areas: 
-        "Header"
-        "Wil"
-        "Navbar";
-
-        &__Yael {
-                display: none;
+        &__MenuBtn {
+            display:grid;
+            padding: 10px;
+            justify-content: center;
+                img {
+                width: 30px;
+                height: 30px;
+                }
         }
-        &__Roi {
-                display: none;
+
+    }
+
+    &__Main {
+        width: 100%;
+        height: 84vh;
+        //border: 1px solid red;
+    }
+
+    &__Navbar {
+        display:flex;
+        flex-direction:row;
+
+        &--Btn {
+            display:flex;
+            width: 100%;
+            height: 7vh;
+            justify-content: center;
+            align-items: center;
+            //border: 1px solid red;
+
+            img {
+                width: 25px;
+                height: 25px;
+            }
         }
     }
 }
