--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -2,6 +2,7 @@ body {
   display: flex;
   background: #eee;
   height: auto;
+  width: 100vw;
 }
 #landing {
   padding-top: 1.5rem;
@@ -92,14 +93,17 @@ body {
   //------------Etan
   //----- already created description boxes
   &__task {
+    overflow-y: hidden;
     &-count {
       display: flex;
-      padding-left: 1.5rem;
       flex-direction: row;
-      width: 100vw;
+      max-width: 100vw;
       background: #f0f0f2;
       height: fit-content;
       overflow-y: scroll;
+      &:nth-child(1) {
+        margin-left: 1.5rem;
+      }
 
       @media only screen and (min-width: 600px) {
         max-width: 100%;
@@ -198,8 +202,8 @@ body {
     // ------ adding description box
 
     &__descr {
-      border: 2px solid rgba(128, 128, 128, 0.7);
-      border-radius: 3px;
+      border: 2px solid rgba(128, 128, 128, 0.4);
+      border-radius: 5px;
       max-width: 100vw;
       box-sizing: content-box;
       display: flex;
@@ -230,101 +234,172 @@ body {
         }
       }
     }
+    //--------- Calendar
     &__cal {
-      margin-left: 1.5rem;
       padding: 0;
       box-sizing: border-box;
-      
       font-size: 62.5%;
-      width: fit-content;
+      max-width: 100vw;
       height: fit-content;
-      background-color: #1212;
-      color: #eee;
+      color: #141414;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       text-transform: capitalize;
+      margin: 1.5rem;
 
       &__flex {
-        width: 26rem;
-        height: 20rem;
-        background-color: #222227;
-        box-shadow: 0.5 rem 3 rem rgba($color: #000000, $alpha: 0.4);
+        display: grid;
+        align-content: flex-start;
+        width: 100vw;
+        height: fit-content;
+        background-color: white;
+        border-radius: 2rem;
+        padding: 2vw 0rem 5vw 0rem;
+        box-shadow: 0.5 rem 3rem rgba($color: #000000, $alpha: 0.4);
       }
-      &__month {
+      &__title {
         height: 6rem;
-        background-color: #167e56;
+        width: 100vw;
+        margin: 0 1vw;
         display: flex;
-        justify-content: space-between;
+        flex-direction: row;
         align-items: center;
-        padding: 0 1rem;
         text-align: center;
-        text-shadow: 0.15rem 0.25rem rgba(0, 0, 0, 0.5);
+        text-shadow: 0.15rem 0.25rem rgba(0, 0, 0, 0.2);
         i {
           font-size: 1.25rem;
           cursor: pointer;
-          
+          margin-left: auto;
+          margin-right: 1.5rem;
         }
         h1 {
           font-size: 1.5rem;
           font-weight: 400;
-          text-transform: uppercase;
+          text-transform: capitalize;
           letter-spacing: 0.1rem;
-          margin-bottom: .5rem;
+          padding: 0;
         }
-        p {
-          font-size: .8rem;
+        svg {
+          margin: 1.5rem;
         }
       }
-      &__date {
-      }
+      
       &__weekdays {
-        width: 100%;
+        width: 100vw;
         height: 2.5rem;
-        padding: 0 0.2rem;
         display: flex;
-        align-items: center;
 
         div {
-          font-size: .75 rem;
-          font-weight: 400;
-          letter-spacing: 0.05rem;
-          width: calc(22.1rem / 7);
+          font-size: 0.75rem;
+          font-weight: 600;
+          letter-spacing: 0.5vw;
+          width: auto;
           display: flex;
           justify-content: center;
           align-items: center;
-          text-shadow: 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+          text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+          margin: auto;
         }
       }
       &__days {
         width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        padding: 0.1rem;
-        div {
-          font-size: .7rem;
-          margin: 0.15rem;
-          width: calc(20.1rem / 7);
-          height: 2rem;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-shadow: 0.15rem 0.25rem rgba(0, 0, 0, 0.5);
+        height: 100%;
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        grid-template-rows: repeat(5, 3vw);
+        justify-items: center;
+        align-items: center;
+        grid-gap: 5vw;
+        padding-left: auto;
+        margin: auto;
+        font-size: 0.75rem;
+        text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+        transition: background-color 0.2s;
+
+        @media only screen and (min-width: 600px) {
+          padding: 0 2vw;;
         }
-        .prev-date,.next-date{
-          opacity: .5;      
+        div {
+          height: fit-content;
+          line-height: 3vh;
+          width: fit-content;
+          padding: 1vw 1vw 0.5vw 1vw;
+          border-radius: 0.25rem;
+
+          &:hover {
+            cursor: pointer;
+
+            &:not(.today) {
+              background-color: #918d8d;
+              font-weight: bolder;
+            }
+          }
+          & p {
+            margin: 0;
+          }
+        }
+
+        .prev-date,
+        .next-date {
+          opacity: 0.5;
+        }
+        .assigned {
+          display: flex;
+          flex-direction: column;
+          
+          column-gap: 0;
+          text-align: center;
+          justify-content: space-around;
+          p {
+            line-height: 1.5vh;
+          }
+        }
+        .today {
+          font-weight: bolder;
+          color: white;
+          background-color: #141414;
+          text-align: center;
+          display: flex;
+          flex-direction: column;
+          padding: 0.1vw 1vw 0.1vw 1vw;
         }
       }
     }
   }
 }
+.iconify {
+  padding: 0;
+}
 
 main {
   display: flex;
-  width: 100%;
-  height: 100vh;
+  max-width: 100vw;
+  height: 100%;
   flex-direction: column;
   align-self: center;
-  overflow-y: hidden;
+
   background-color: #f0f0f2;
+}
+
+//icon styles, use as
+.md-18 {
+  font-size: 18px;
+}
+
+.md-24 {
+  font-size: 24px;
+}
+
+.md-30 {
+  font-size: 30px;
+}
+
+.md-36 {
+  font-size: 36px;
+}
+
+.md-40 {
+  font-size: 40px;
 }
