--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
@@ -4,18 +4,28 @@ body {
 }
 
 .Container {
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.1fr auto 0.1fr;
+    grid-template-areas: 
+    "Header Header Header"
+    "Wil Roi Yael"
+    "Navbar Navbar Navbar"
+    ;
 
     &__Header {
+        
+        grid-area: Header;
         display:grid;
         grid-template-columns: 0.1fr auto 0.1fr;
-        grid-template-rows: 7vh;
         align-items: center;
-        //border: 1px solid red;
+        border: 1px solid red;
         
         &__Avatar {
                 display: grid;
                 padding: 10px;
                 justify-content: center;
+                
                 img {
                 width: 30px;
                 height: 30px;
@@ -30,9 +40,10 @@ body {
     
         &__MenuBtn {
             display:grid;
-            padding: 10px;
+            padding: px;
             justify-content: center;
-                img {
+                
+            img {
                 width: 30px;
                 height: 30px;
                 }
@@ -41,22 +52,31 @@ body {
     }
 
     &__Main {
-        width: 100%;
-        height: 84vh;
-        //border: 1px solid red;
+        height: 80vh;
+        border: 1px solid red;
+        
+        &__Wil {
+            border: 1px solid red;
+        }
+        &__Roi {
+            border: 1px solid red;
+        }
+        &__Yael {
+            border: 1px solid red;
+        }
     }
 
     &__Navbar {
+        grid-area:Navbar;
         display:flex;
         flex-direction:row;
 
         &--Btn {
             display:flex;
             width: 100%;
-            height: 7vh;
             justify-content: center;
             align-items: center;
-            //border: 1px solid red;
+            border: 1px solid red;
 
             img {
                 width: 25px;
